--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ nav ul li a {
 }
 
 .hero {
-    background-image: url('img/101.jpg'); /* ใช้ภาพพื้นหลังใหม่ */
+    background-image: url('img/118.gif'); /* ใช้ภาพพื้นหลังใหม่ */
     background-size: cover;
     background-position: center;
     text-align: center;
